# number_guessing

./: README.md
.github/workflows/: py_flake8_pytest_cov.yml  pylint.yml  python-app.yml  super-linter.yml
python/: README.md  number_guessing.py  pyproject.toml
python/tests/: __init__.py  test_number_guessing.py
